# RosOpencv-EdgeDetection

./: README.adoc  README.md
opencv_ros/: CMakeLists.txt  package.xml
opencv_ros/msg/: Image.msg
opencv_ros/src/: image.cpp  odom.cpp
opencv_ros/srv/: Encoder.srv
